--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>即時時鐘</title>
-  <!-- 引入 Abril Fatface 字型 -->
-  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+  <!-- 引入 Oswald 字型 -->
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #FFFFFF; /* 純白背景 */
@@ -16,7 +16,7 @@
       align-items: center;
     }
     #clock {
-      font-family: 'Abril Fatface', serif; /* 使用 Abril Fatface 字型 */
+      font-family: 'Oswald', sans-serif; /* 使用 Oswald 字型 */
       font-size: 100px; /* 字體大小，可調整 */
       color: #333333; /* 舒適的深灰色 */
       text-align: center;
@@ -28,7 +28,7 @@
   <script>
     function updateClock() {
       var clockElement = document.getElementById("clock");
-      clockElement.innerHTML = new Date().toLocaleTimeString('zh-TW', { hour12: false }); // 24小時制，格式如 21:20:14
+      clockElement.innerHTML = new Date().toLocaleTimeString('zh-TW', { hour12: false }); // 24小時制，格式如 21:49:14
     }
     setInterval(updateClock, 1000); // 每秒更新
     updateClock(); // 初始載入時立即顯示
